--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -53,9 +53,9 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
           echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}" >> .env
           echo "REFRESH_TOKEN=${{ secrets.REFRESH_TOKEN }}" >> .env
-          echo "LINE_CHANNEL_ACCESS_TOKEN=${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}" >> .env
-          echo "LINE_CHANNEL_SECRET=${{ secrets.LINE_CHANNEL_SECRET }}" >> .env
-          echo "LINE_CHANNEL_ID=${{ secrets.LINE_CHANNEL_ID }}" >> .env
+          echo "LIME_MESSAGE_TOKEN=${{ secrets.LIME_MESSAGE_TOKEN }}" >> .env
+          echo "LINE_MESSAGE_CHANNEL_SECRET=${{ secrets.LINE_MESSAGE_CHANNEL_SECRET }}" >> .env
+          echo "LINE_MANAGER_ID=${{ secrets.LINE_MANAGER_ID }}" >> .env
 
       - name: Clear cron_job folder except log
         run: |
