feat : fastify 升版 + jwt 登入邏輯

--- a/apps/kai-ba/tsconfig.json
+++ b/apps/kai-ba/tsconfig.json
@@ -29,29 +29,13 @@
     "**/*.spec.ts"
   ],
   "references": [
-    {
-      "path": "../../libs/crawler"
-    },
-    {
-      "path": "../../libs/google-apis"
-    },
-    {
-      "path": "../../libs/line"
-    },
-    {
-      "path": "../../libs/mailer"
-    },
-    {
-      "path": "../../libs/mongo-server"
-    },
-    {
-      "path": "../../libs/schemas"
-    },
-    {
-      "path": "../../libs/ruten-apis"
-    },
-    {
-      "path": "../../libs/cache"
-    }
+    { "path": "../../libs/crawler" },
+    { "path": "../../libs/google-apis" },
+    { "path": "../../libs/line" },
+    { "path": "../../libs/mailer" },
+    { "path": "../../libs/mongo-server" },
+    { "path": "../../libs/schemas" },
+    { "path": "../../libs/ruten-apis" },
+    { "path": "../../libs/cache" }
   ]
 }
