--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -10,7 +10,8 @@
     "test": "jest --coverage",
     "clean": "rimraf ./dist tsconfig.tsbuildinfo",
     "rebuild": "rimraf ./node_modules && yarn install",
-    "build": "yarn clean && tsc  --build --verbose",
+    "prebuild": "yarn clean && mkdir -p dist/public && copyfiles -u 1 \"src/public/**/*\" dist",
+    "build": "tsc --build --verbose",
     "start": "yarn build && fastify start -l info dist/app.js",
     "watch:ts": "tsc --watch",
     "dev": "yarn build && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"yarn watch:ts\" \"yarn dev:start\"",
@@ -20,35 +21,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/auth": "^4.6.1",
-    "@fastify/autoload": "^5.0.0",
-    "@fastify/compress": "^7.0.3",
-    "@fastify/cookie": "^9.3.1",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/rate-limit": "^9.1.0",
-    "@fastify/redis": "^6.2.0",
-    "@fastify/secure-session": "^7.5.1",
-    "@fastify/sensible": "^5.0.0",
-    "@fastify/static": "^7.0.4",
-    "@fastify/swagger": "^8.15.0",
-    "@fastify/swagger-ui": "^4.0.1",
-    "@types/uuid": "^10.0.0",
+    "@fastify/autoload": "^6.0.0",
+    "@fastify/compress": "^8.0.1",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/jwt": "^9.1.0",
+    "@fastify/rate-limit": "^10.2.2",
+    "@fastify/redis": "^7.0.2",
+    "@fastify/sensible": "^6.0.0",
+    "@fastify/static": "^8.1.1",
+    "@fastify/swagger": "^9.5.0",
+    "@fastify/swagger-ui": "^5.2.2",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
-    "awilix": "^11.0.0",
-    "close-with-grace": "^1.3.0",
-    "fastify": "^4.26.1",
-    "fastify-cli": "^6.2.1",
-    "fastify-plugin": "^4.0.0",
+    "awilix": "^12.0.5",
+    "bcrypt": "^5.1.1",
+    "close-with-grace": "^2.2.0",
+    "fastify": "^5.0.0",
+    "fastify-cli": "^7.4.0",
+    "fastify-plugin": "^5.0.0",
     "node-cache": "^5.1.2",
-    "uuid": "^10.0.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.4",
-    "c8": "^9.0.0",
-    "concurrently": "^8.2.2",
-    "fastify-tsconfig": "^2.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^22.1.0",
+    "c8": "^10.1.2",
+    "concurrently": "^9.0.0",
+    "fastify-tsconfig": "^3.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^5.2.2"
+    "typescript": "~5.8.2"
   }
 }
