--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.1.3",
