--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -39,6 +39,7 @@
     "close-with-grace": "^2.2.0",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.0",
+    "fastify-graceful-shutdown": "^4.0.1",
     "fastify-plugin": "^5.0.0",
     "node-cache": "^5.1.2",
     "uuid": "^11.1.0"
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.1.0",
+    "@types/uuid": "^10.0.0",
     "c8": "^10.1.2",
     "concurrently": "^9.0.0",
     "fastify-tsconfig": "^3.0.0",
