--- a/apps/kai-ba/tsconfig.json
+++ b/apps/kai-ba/tsconfig.json
@@ -26,7 +26,8 @@
   ],
   "exclude": [
     "node_modules", // 排除的目錄
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "**/*.test.ts"
   ],
   "references": [
     { "path": "../../libs/crawler" },
