--- a/apps/atom/package.json
+++ b/apps/atom/package.json
@@ -16,12 +16,14 @@
     "@primevue/nuxt-module": "^4.3.4",
     "axios": "^1.9.0",
     "nuxt": "^3.17.3",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "sass-embedded": "^1.89.0"
   }
 }
