--- a/apps/atom/package.json
+++ b/apps/atom/package.json
@@ -15,6 +15,7 @@
     "@primevue/forms": "^4.3.4",
     "@primevue/nuxt-module": "^4.3.4",
     "axios": "^1.9.0",
+    "gsap": "^3.12.5",
     "nuxt": "^3.17.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
