--- a/apps/atom/package.json
+++ b/apps/atom/package.json
@@ -20,6 +20,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
     "tailwindcss": "^3.4.17",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
