fix(ci): correct invoker-iam-disabled logic - use 'true' for public access
- Fix incorrect logic: invoker-iam-disabled: 'true' allows public access
- invoker-iam-disabled: 'false' would require authentication
- The annotation name means 'disable IAM checking for invokers'
- true = disable IAM = public access ✅
- false = enable IAM = authentication required ❌

--- a/.github/workflows/kai-ba.yml
+++ b/.github/workflows/kai-ba.yml
@@ -137,8 +137,9 @@ jobs:
           if 'annotations' not in data['metadata']:
               data['metadata']['annotations'] = {}
 
-          # 明確設定允許公開訪問 (這是關鍵!)
-          data['metadata']['annotations']['run.googleapis.com/invoker-iam-disabled'] = 'false'
+          # 明確設定允許公開訪問 - 正確的值應該是 'true'
+          data['metadata']['annotations']['run.googleapis.com/invoker-iam-disabled'] = 'true'
+          print("=== 設定 invoker-iam-disabled: 'true' (允許公開訪問) ===")
 
           # 添加部署資訊到 template annotations
           if 'spec' in data and 'template' in data['spec']:
