feat(ci): restore path-based workflow triggers after successful testing
- Remove temporary path restriction comments
- Restore selective triggering for efficient CI/CD
- Workflow now triggers only when relevant files change:
  - libs/** (shared libraries)
  - apps/kai-ba/** (kai-ba application)
  - docker/kai-ba/** (Docker configuration)
  - .github/workflows/kai-ba.yml (workflow itself)
  - .github/gcp/kai-ba-cloudrun.yml (Cloud Run config)

Pipeline is now fully functional with correct invoker-iam-disabled logic!

--- a/.github/workflows/kai-ba.yml
+++ b/.github/workflows/kai-ba.yml
@@ -4,13 +4,12 @@ on:
   push:
     branches:
       - main
-    # 暫時移除 paths 限制，方便測試
-    # paths:
-    #   - 'libs/**'
-    #   - 'apps/kai-ba/**'
-    #   - 'docker/kai-ba/**'
-    #   - '.github/workflows/kai-ba.yml'
-    #   - '.github/gcp/kai-ba-cloudrun.yml'
+    paths:
+      - 'libs/**'
+      - 'apps/kai-ba/**'
+      - 'docker/kai-ba/**'
+      - '.github/workflows/kai-ba.yml'
+      - '.github/gcp/kai-ba-cloudrun.yml'
 
 env:
   # Docker 設定
